--- a/index.html
+++ b/index.html
@@ -1,8 +1,68 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with Github Pages.</p>
-<p>My name is Hansen-M-Sheri </p>
+<h1>CIT 261 Portfolio</h1>
+<h3>for Sheri Hansen</h3>
+<table style = width="100">
+	<tr>
+		<th>Code Topics</th>
+		<th>Last Updated</th>
+		<th>Notes to Bro. James</th>
+	</tr>
+	<tr>
+		<td>JavaScript</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>JSON</td>
+		<td></td>
+		<td></td>
+	</tr><tr>
+		<td>Local Storage</td>
+		<td></td>
+		<td></td>
+	</tr><tr>
+		<td>DOM</td>
+		<td></td>
+		<td></td>
+	</tr><tr>
+		<td>CSS3 Transitions</td>
+		<td></td>
+		<td></td>
+	</tr><tr>
+		<td>CSS3 Transformations</td>
+		<td></td>
+		<td></td>
+	</tr><tr>
+		<td>CSS3 Animations</td>
+		<td></td>
+		<td></td>
+	</tr><tr>
+		<td>CSS# + JavaScript</td>
+		<td></td>
+		<td></td>
+	</tr><tr>
+		<td>AJAX</td>
+		<td></td>
+		<td></td>
+	</tr><tr>
+		<td>JavaScript Events</td>
+		<td></td>
+		<td></td>
+	</tr><tr>
+		<td></td>
+		<td></td>
+		<td></td>
+	</tr><tr>
+		<td></td>
+		<td></td>
+		<td></td>
+	</tr><tr>
+		<td></td>
+		<td></td>
+		<td></td>
+	</tr>
+</table>
 </body>
-</html>
+</html?
