Added table data

--- a/index.html
+++ b/index.html
@@ -15,50 +15,66 @@
 		<td></td>
 	</tr>
 	<tr>
+		<td>JavaScript Objects</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
 		<td>JSON</td>
 		<td></td>
 		<td></td>
-	</tr><tr>
+	</tr>
+	<tr>
 		<td>Local Storage</td>
 		<td></td>
 		<td></td>
-	</tr><tr>
+	</tr>
+	<tr>
 		<td>DOM</td>
 		<td></td>
 		<td></td>
-	</tr><tr>
+	</tr>
+	<tr>
 		<td>CSS3 Transitions</td>
 		<td></td>
 		<td></td>
-	</tr><tr>
+	</tr>
+	<tr>
 		<td>CSS3 Transformations</td>
 		<td></td>
 		<td></td>
-	</tr><tr>
+	</tr>
+	<tr>
 		<td>CSS3 Animations</td>
 		<td></td>
 		<td></td>
-	</tr><tr>
+	</tr>
+	<tr>
 		<td>CSS# + JavaScript</td>
 		<td></td>
 		<td></td>
-	</tr><tr>
+	</tr>
+	<tr>
 		<td>AJAX</td>
 		<td></td>
 		<td></td>
-	</tr><tr>
+	</tr>
+	<tr>
 		<td>JavaScript Events</td>
 		<td></td>
 		<td></td>
-	</tr><tr>
+	</tr>
+	<tr>
+		<td>HTML5 Tags - Video, Audio, and Canvas</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
 		<td></td>
 		<td></td>
 		<td></td>
-	</tr><tr>
-		<td></td>
-		<td></td>
-		<td></td>
-	</tr><tr>
+	</tr>
+	<tr>
 		<td></td>
 		<td></td>
 		<td></td>
