--- a/index.html
+++ b/index.html
@@ -1,84 +1,85 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>CIT 261 Portfolio</h1>
-<h3>for Sheri Hansen</h3>
-<table style = width="100">
-	<tr>
-		<th>Code Topics</th>
-		<th>Last Updated</th>
-		<th>Notes to Bro. James</th>
-	</tr>
-	<tr>
-		<td>JavaScript</td>
-		<td></td>
-		<td></td>
-	</tr>
-	<tr>
-		<td>JavaScript Objects</td>
-		<td></td>
-		<td></td>
-	</tr>
-	<tr>
-		<td>JSON</td>
-		<td></td>
-		<td></td>
-	</tr>
-	<tr>
-		<td>Local Storage</td>
-		<td></td>
-		<td></td>
-	</tr>
-	<tr>
-		<td>DOM</td>
-		<td></td>
-		<td></td>
-	</tr>
-	<tr>
-		<td>CSS3 Transitions</td>
-		<td></td>
-		<td></td>
-	</tr>
-	<tr>
-		<td>CSS3 Transformations</td>
-		<td></td>
-		<td></td>
-	</tr>
-	<tr>
-		<td>CSS3 Animations</td>
-		<td></td>
-		<td></td>
-	</tr>
-	<tr>
-		<td>CSS# + JavaScript</td>
-		<td></td>
-		<td></td>
-	</tr>
-	<tr>
-		<td>AJAX</td>
-		<td></td>
-		<td></td>
-	</tr>
-	<tr>
-		<td>JavaScript Events</td>
-		<td></td>
-		<td></td>
-	</tr>
-	<tr>
-		<td>HTML5 Tags - Video, Audio, and Canvas</td>
-		<td></td>
-		<td></td>
-	</tr>
-	<tr>
-		<td></td>
-		<td></td>
-		<td></td>
-	</tr>
-	<tr>
-		<td></td>
-		<td></td>
-		<td></td>
-	</tr>
-</table>
-</body>
-</html?
+	<head>
+		<title>Sheri Hansen CIT 262 Portfolio</title>
+		<link rel="stylesheet" type="text/css" href="styleSheet.css">
+	</head>
+	<body>
+		<div id = "gradient1">
+			<h1>CIT 261 Portfolio</h1>
+			<h3>for Sheri Hansen</h3>
+		</div>
+		<table style = width="100">
+			<thead>
+				<tr>
+					<th>Code Topics</th>
+					<th>Last Updated</th>
+					<th>Notes to Bro. James</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>JavaScript</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>JavaScript Objects</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>JSON</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>Local Storage</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>DOM</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>CSS3 Transitions</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>CSS3 Transformations</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>CSS3 Animations</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>CSS# + JavaScript</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>AJAX</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>JavaScript Events</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>HTML5 Tags - Video, Audio, and Canvas</td>
+					<td></td>
+					<td></td>
+				</tr>
+			</tbody>
+			
+		</table>
+	</body>
+</html>
