test inline style

--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<style>
+		gradient1 {
+			height: 200 px;
+			background-color: blue;
+			background-image: linear-gradient(blue, green);
+		}
+		</style>
 		<title>Sheri Hansen CIT 262 Portfolio</title>
 		<link rel="stylesheet" type="text/css" href="styleSheet.css">
 	</head>
