testing classes in index

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td>JavaScript</td>
+					<td><h3 class="weeklyTopic">JavaScript</h3></td>
 					<td></td>
 					<td></td>
 				</tr>
