Testing link for wk 1

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td><h3 class="weeklyTopic">JavaScript</h3></td>
-					<td></td>
+					<td>JavaScript</td>
+					<td><a href="https://hansen-m-sheri.github.io/basicJavaScript.html">Basic JavaScript</a></td>
 					<td></td>
 				</tr>
 				<tr>
