add files and links in index for weekly topics

--- a/index.html
+++ b/index.html
@@ -25,57 +25,57 @@
 				</tr>
 				<tr>
 					<td>JavaScript Objects</td>
-					<td></td>
+					<td><a href="https://hansen-m-sheri.github.io/javaScriptObjects.html">JavaScript Objects</a></td>
 					<td></td>
 				</tr>
 				<tr>
 					<td>JSON</td>
-					<td></td>
+					<td><a href="https://hansen-m-sheri.github.io/json.html">JSON</a></td>
 					<td></td>
 				</tr>
 				<tr>
 					<td>Local Storage</td>
-					<td></td>
+					<td><a href="https://hansen-m-sheri.github.io/localStorage.html">Local Storage</a></td>
 					<td></td>
 				</tr>
 				<tr>
 					<td>DOM</td>
-					<td></td>
+					<td><a href="https://hansen-m-sheri.github.io/dom.html">DOM</a></td>
 					<td></td>
 				</tr>
 				<tr>
 					<td>CSS3 Transitions</td>
-					<td></td>
+					<td><a href="https://hansen-m-sheri.github.io/css3Transitions.html">CSS3 Transitions</a></td>
 					<td></td>
 				</tr>
 				<tr>
 					<td>CSS3 Transformations</td>
-					<td></td>
+					<td><a href="https://hansen-m-sheri.github.io/css3Transformations.html">CSS3 Transformations</a></td>
 					<td></td>
 				</tr>
 				<tr>
 					<td>CSS3 Animations</td>
-					<td></td>
+					<td><a href="https://hansen-m-sheri.github.io/css3Animations.html">CSS3 Animations</a></td>
 					<td></td>
 				</tr>
 				<tr>
-					<td>CSS# + JavaScript</td>
-					<td></td>
+					<td>CSS3 + JavaScript</td>
+					<td><a href="https://hansen-m-sheri.github.io/css3JavaScript.html">CSS3 and JavaScript</a></td>
 					<td></td>
 				</tr>
 				<tr>
 					<td>AJAX</td>
-					<td></td>
+					<td><a href="https://hansen-m-sheri.github.io/ajax.html">AJAX</a></td>
 					<td></td>
 				</tr>
 				<tr>
 					<td>JavaScript Events</td>
-					<td></td>
+					<td><a href="https://hansen-m-sheri.github.io/javaScriptEvents.html">JavaScript Events</a></td>
 					<td></td>
 				</tr>
 				<tr>
 					<td>HTML5 Tags - Video, Audio, and Canvas</td>
-					<td></td>
+					<td><a href="https://hansen-m-sheri.github.io/html5Tags.html">HTML 5 Tags</a></td>
 					<td></td>
 				</tr>
 			</tbody>
