testing relative path

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 			<tbody>
 				<tr>
 					<td>JavaScript</td>
-					<td><a href="https://hansen-m-sheri.github.io/basicJavaScript.html">Basic JavaScript</a></td>
+					<td><a href="basicJavaScript.html">Basic JavaScript</a></td>
 					<td></td>
 				</tr>
 				<tr>
 					<td>JavaScript Objects</td>
-					<td><a href="https://hansen-m-sheri.github.io/javaScriptObjects.html">JavaScript Objects</a></td>
+					<td><a href="javaScriptObjects.html">JavaScript Objects</a></td>
 					<td></td>
 				</tr>
 				<tr>
@@ -75,7 +75,7 @@
 				</tr>
 				<tr>
 					<td>HTML5 Tags - Video, Audio, and Canvas</td>
-					<td><a href="https://hansen-m-sheri.github.io/html5Tags.html">HTML 5 Tags</a></td>
+					<td><a href="https://hansen-m-sheri.github.io/html5Tags.html">HTML5 Tags</a></td>
 					<td></td>
 				</tr>
 			</tbody>
