Made all file paths relative

--- a/index.html
+++ b/index.html
@@ -30,47 +30,47 @@
 				</tr>
 				<tr>
 					<td>JSON</td>
-					<td><a href="https://hansen-m-sheri.github.io/json.html">JSON</a></td>
+					<td><a href="json.html">JSON</a></td>
 					<td></td>
 				</tr>
 				<tr>
 					<td>Local Storage</td>
-					<td><a href="https://hansen-m-sheri.github.io/localStorage.html">Local Storage</a></td>
+					<td><a href="localStorage.html">Local Storage</a></td>
 					<td></td>
 				</tr>
 				<tr>
 					<td>DOM</td>
-					<td><a href="https://hansen-m-sheri.github.io/dom.html">DOM</a></td>
+					<td><a href="dom.html">DOM</a></td>
 					<td></td>
 				</tr>
 				<tr>
 					<td>CSS3 Transitions</td>
-					<td><a href="https://hansen-m-sheri.github.io/css3Transitions.html">CSS3 Transitions</a></td>
+					<td><a href="css3Transitions.html">CSS3 Transitions</a></td>
 					<td></td>
 				</tr>
 				<tr>
 					<td>CSS3 Transformations</td>
-					<td><a href="https://hansen-m-sheri.github.io/css3Transformations.html">CSS3 Transformations</a></td>
+					<td><a href="css3Transformations.html">CSS3 Transformations</a></td>
 					<td></td>
 				</tr>
 				<tr>
 					<td>CSS3 Animations</td>
-					<td><a href="https://hansen-m-sheri.github.io/css3Animations.html">CSS3 Animations</a></td>
+					<td><a href="css3Animations.html">CSS3 Animations</a></td>
 					<td></td>
 				</tr>
 				<tr>
 					<td>CSS3 + JavaScript</td>
-					<td><a href="https://hansen-m-sheri.github.io/css3JavaScript.html">CSS3 and JavaScript</a></td>
+					<td><a href="css3JavaScript.html">CSS3 and JavaScript</a></td>
 					<td></td>
 				</tr>
 				<tr>
 					<td>AJAX</td>
-					<td><a href="https://hansen-m-sheri.github.io/ajax.html">AJAX</a></td>
+					<td><a href="ajax.html">AJAX</a></td>
 					<td></td>
 				</tr>
 				<tr>
 					<td>JavaScript Events</td>
-					<td><a href="https://hansen-m-sheri.github.io/javaScriptEvents.html">JavaScript Events</a></td>
+					<td><a href="javaScriptEvents.html">JavaScript Events</a></td>
 					<td></td>
 				</tr>
 				<tr>
