--- a/basicJavaScript.html
+++ b/basicJavaScript.html
@@ -20,6 +20,6 @@
 
 	<img id="myImage" src="confident.png" style="width:200px">
 
-	<button onclick="document.getElementById('myImage').src="stressed.png'">How you look on the last day of class</button>
+	<button onclick="document.getElementById('myImage').src="stressed.png">How you look on the last day of class</button>
 </body>
 </html>
