--- a/javaScriptObjects.html
+++ b/javaScriptObjects.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<script src="javaScriptObject.js"></script>
+</head>
 <body>
 
 <h1>Magic 8 Ball</h1>
@@ -12,9 +15,7 @@
 <p id="demo">Use an object to get a random answer each time. How would I do that?  </p>
 
 <script>
-function myFunction() { 
-    document.getElementById("demo").innerHTML = "Hello JavaScript!";
-}
+
 </script>
 
 </body>
