another answer button

--- a/javaScriptObjects.html
+++ b/javaScriptObjects.html
@@ -15,7 +15,10 @@
 </select>
 
 <p id="demo"></p>
-<p id="demo1"></p>
+
+<p>Don't like the answer?</p>
+
+<button onclick="magicAnswers()">Get another answer</button>;
 
 </body>
 </html>
