--- a/javaScriptObjects.html
+++ b/javaScriptObjects.html
@@ -18,7 +18,7 @@
 
 <p>Don't like the answer?</p>
 
-<button onclick="magicAnswers()">Get another answer</button>;
+<button type="button" onclick="magicAnswers()">Get another answer</button>;
 
 </body>
 </html>
