initially hide anotherTry for answer, then reveal

--- a/javaScriptObjects.html
+++ b/javaScriptObjects.html
@@ -14,12 +14,13 @@
 	<option value="failClass">Will I fail this class?</option>
 </select>
 
-<p id="demo"></p>
+<p id="demo" style="display:none"></p>
 
-<p>Don't like the answer?</p>
+<div id="anotherTry">
+	<p >Don't like the answer?</p>
 
-<button type="button" onclick="magicAnswers()">Get another answer</button>;
-
+	<button type="button" onclick="magicAnswers()">Get another answer</button>;
+</div>
 </body>
 </html>
 
