fix location of display:none

--- a/javaScriptObjects.html
+++ b/javaScriptObjects.html
@@ -14,9 +14,9 @@
 	<option value="failClass">Will I fail this class?</option>
 </select>
 
-<p id="demo" style="display:none"></p>
+<p id="demo"></p>
 
-<div id="anotherTry">
+<div id="anotherTry" style="display:none">
 	<p >Don't like the answer?</p>
 
 	<button type="button" onclick="magicAnswers()">Get another answer</button>;
