unhide try again

--- a/javaScriptObjects.html
+++ b/javaScriptObjects.html
@@ -16,7 +16,7 @@
 
 <p id="demo"></p>
 
-<div id="anotherTry" style="display:none">
+<div id="anotherTry" >
 	<p >Don't like the answer?</p>
 
 	<button type="button" onclick="magicAnswers()">Get another answer</button>;
