fix hopefully working tryAgain

--- a/javaScriptObjects.html
+++ b/javaScriptObjects.html
@@ -16,11 +16,9 @@
 
 <p id="demo"></p>
 
-<div id="anotherTry" style="display:none">
-	<p >Don't like the answer?</p>
+<p id="anotherTry" style="display:none">Don't like the answer?</p>
 
-	<button type="button" onclick="tryAgain()">Get another answer</button>;
-</div>
+<button type="button" onclick="tryAgain()">Get another answer</button>
 </body>
 </html>
 
