--- a/javaScriptObjects.html
+++ b/javaScriptObjects.html
@@ -8,7 +8,7 @@
 <h1>Magic 8 Ball</h1>
 
 <select id="selectQuestion" onchange="magicAnswers()">
-	<option value="default" selected="selected">"What question do you want the magic 8 ball to answer?"</option>
+	<option value="default" selected>"What question do you want the magic 8 ball to answer?"</option>
 	<option value="win">Will I win $100?</option>
 	<option value="goodGrades">Will I get an A in this class?</option>
 	<option value="failClass">Will I fail this class?</option>
