--- a/javaScriptObjects.html
+++ b/javaScriptObjects.html
@@ -12,6 +12,9 @@
 	<option value="win">Will I win $100?</option>
 	<option value="goodGrades">Will I get an A in this class?</option>
 	<option value="failClass">Will I fail this class?</option>
+	<option value="single">Will I be single my whole life?</option>
+	<option value="kids">Will I have more than 100 children?</option>
+	<option value="car">Will I get a sports car?</option>
 </select>
 
 <p id="demo"></p>
