change filename for .js

--- a/basicJavaScript.html
+++ b/basicJavaScript.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="javaScriptObject.js"></script>
+	<script src="javaScriptBasics.js"></script>
 </head>
 <body>
 
