scrolling on html

--- a/basicJavaScript.html
+++ b/basicJavaScript.html
@@ -4,7 +4,7 @@
 	<script src="javaScriptBasics.js"></script>
 </head>
 <body>
-
+<div id="page" style="overflow-y: scroll;">
 	<h1>Basic JavaScript</h1>
 
 	<hr>
@@ -50,7 +50,7 @@
 	</div>
 
 	<hr>
-	
+
 	<h1>Magic 8 Ball</h1>
 
 <select id="selectQuestion" onchange="magicAnswers()">
@@ -69,5 +69,6 @@
 
 <button type="button" onclick="tryAgain()">Get another answer</button>
 -->
+</div>
 </body>
 </html>
