--- a/basicJavaScript.html
+++ b/basicJavaScript.html
@@ -64,7 +64,7 @@
 		<option value="car">Will I get a sports car?</option>
 	</select>
 
-	<p id="demo"></p>
+	<p id="answer"></p>
 <!--
 <p id="anotherTry" style="display:none">Don't like the answer?</p>
 
