--- a/javaScriptObjects.html
+++ b/javaScriptObjects.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="javaScriptObject.js"></script>
+	<script src="javaScriptObjects.js"></script>
 </head>
 <body>
 
-<h1>Magic 8 Ball</h1>
+	<h1>JavaScript Objects</h1>
 
-<select id="selectQuestion" onchange="magicAnswers()">
-	<option value="default" selected>"What question do you want the magic 8 ball to answer?"</option>
-	<option value="win">Will I win $100?</option>
-	<option value="goodGrades">Will I get an A in this class?</option>
-	<option value="failClass">Will I fail this class?</option>
-	<option value="single">Will I be single my whole life?</option>
-	<option value="kids">Will I have more than 100 children?</option>
-	<option value="car">Will I get a sports car?</option>
-</select>
+<script>
+	function doStuff(x, y) {
+		return x * y;
+	}
 
-<p id="demo"></p>
-<!--
-<p id="anotherTry" style="display:none">Don't like the answer?</p>
+	var result = doStuff(23,42);
 
-<button type="button" onclick="tryAgain()">Get another answer</button>
--->
+	
+	console.log(result);
+</script>
+
 </body>
 </html>
 
