--- a/dom.html
+++ b/dom.html
@@ -1,10 +1,55 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<title>LIST MAKER</title>
+	<script src="dom.js"></script>	
+	<style>
+		body {
+			background-color: #e5e7ea
+		}
+		#header {
+			background-color: #000;
+			color: white;
+			padding-right: 20px;
+			padding-left: 20px;
+			height: 50px;
+
+		}
+		#input {
+			padding: 20px;
+		}
+		#list {
+        	margin-right: 220px;
+            margin-left: 20px;
+        }
+		.deleteButton {
+			background-color: #f9042d;
+			color: white;
+			float: right;
+		}
+	</style>
+</head>
 <body>
-
-<h1>DOM</h1>
-
-
+	<div id="header">
+		<header><h1>Create a Grocery List</h1></header>
+	</div>
+	<div id="input">
+		<p><h3>ADD ITEMS</h3></p>
+		<form id="form">
+			<input type="text" name="item" >
+			<input type="button" value="Add Item" class="submit">
+		</form>
+	</div>
+	<div id="list">
+		<p><h3>LIST</h3></p>
+		<ul id="items">
+			<li>Item 1 <button class="deleteButton">x</button></li>
+			<li>Item 2<button class="deleteButton">x</button></li>
+			<li>Item 3<button class="deleteButton">x</button></li>
+			<li>Item 4<button class="deleteButton">x</button></li>
+			<!-- Empty till we add items to list -->
+		</ul>
+	</div>
 
 </body>
 </html>
