change to value submit on button

--- a/dom.html
+++ b/dom.html
@@ -19,7 +19,7 @@
 			padding: 20px;
 		}
 		#list {
-        	margin-right: 220px;
+        	margin-right: 420px;
             margin-left: 20px;
         }
 		.deleteButton {
@@ -37,7 +37,7 @@
 		<p><h3>ADD ITEMS</h3></p>
 		<form id="form">
 			<input type="text" name="item" >
-			<input type="button" value="Add Item" class="submit">
+			<input type="submit" value="Submit" class="submit">
 		</form>
 	</div>
 	<div id="list">
