working on fix for form submit

--- a/dom.html
+++ b/dom.html
@@ -36,8 +36,8 @@
 	<div id="input">
 		<p><h3>ADD ITEMS</h3></p>
 		<form id="form">
-			<input type="text" name="item" >
-			<input type="submit" value="Submit" class="submit">
+			<input type="text" name="item" id="newItem">
+			<input type="submit" value="Submit" id="formInput">
 		</form>
 	</div>
 	<div id="list">
