move script to bottom add eventListener

--- a/dom.html
+++ b/dom.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>LIST MAKER</title>
-	<script src="dom.js"></script>	
+		
 	<style>
 		body {
 			background-color: #e5e7ea
@@ -37,7 +37,7 @@
 		<p><h3>ADD ITEMS</h3></p>
 		<form id="form">
 			<input type="text" name="item" id="newItem">
-			<input type="submit" value="Submit" id="formInput">
+			<input type="submit" value="Submit" >
 		</form>
 	</div>
 	<div id="list">
@@ -50,6 +50,6 @@
 			<!-- Empty till we add items to list -->
 		</ul>
 	</div>
-
+<script src="dom.js"></script>
 </body>
 </html>
