create new li and delete button for li items

--- a/dom.html
+++ b/dom.html
@@ -43,10 +43,10 @@
 	<div id="list">
 		<p><h3>LIST</h3></p>
 		<ul id="items">
-			<li>Item 1 <button class="deleteButton">x</button></li>
-			<li>Item 2<button class="deleteButton">x</button></li>
-			<li>Item 3<button class="deleteButton">x</button></li>
-			<li>Item 4<button class="deleteButton">x</button></li>
+			<li>Item 1 <button class="deleteButton">X</button></li>
+			<li>Item 2<button class="deleteButton">X</button></li>
+			<li>Item 3<button class="deleteButton">X</button></li>
+			<li>Item 4<button class="deleteButton">X</button></li>
 			<!-- Empty till we add items to list -->
 		</ul>
 	</div>
