--- a/dom.html
+++ b/dom.html
@@ -44,6 +44,7 @@ function removeItem(e) {
 			//get the parentElement (li)
 			var li = e.target.parentElement;
 			//remove the ul from itemlist
+			var itemList = document.getElementById("items");
 			itemList.removeChild('li');
 		}
 	}
