adding var for itemList

--- a/dom.html
+++ b/dom.html
@@ -15,7 +15,7 @@
 	}
 
 	function addItem(e) { //pass in event object
-		
+	var itemList = document.getElementById("items");
 	var newItem = document.getElementById("newItem").value;
 
 	//create a new li element
