trying to move delete button

--- a/dom.html
+++ b/dom.html
@@ -20,12 +20,12 @@
 		}
 		#list {
         	margin-right: 420px;
-            margin-left: 20px;
+            margin-left: 40px;
         }
 		.deleteButton {
 			background-color: #f9042d;
 			color: white;
-			float: right;
+			float: left;
 		}
 	</style>
 </head>
