button to show object

--- a/javaScriptObjects.html
+++ b/javaScriptObjects.html
@@ -7,6 +7,13 @@
 
 	<h1>JavaScript Objects</h1>
 
+	<h3>Create a user:</h3>
+	<p>User is an object with properties of name, email, online</p>
+	<button onclick="User()">Reveal our user info</button>
+	
+	
+
+
 <script>
 	
 
