--- a/javaScriptObjects.html
+++ b/javaScriptObjects.html
@@ -9,8 +9,8 @@
 
 	<h3>Create a user:</h3>
 	<p>User is an object with properties of name, email, online</p>
-	<button onclick="User()">Reveal our user info</button>
-	
+	<button onclick="demoObjectCreation()">Reveal our user info</button>
+
 	
 
 
