--- a/javaScriptObjects.html
+++ b/javaScriptObjects.html
@@ -10,18 +10,13 @@
 	<h3>Create a user:</h3>
 	<p>User is an object with properties of name, email, online</p>
 	<button onclick="demoObjectCreation()">Reveal our user info</button>
+	<p id="object"></p>
+<hr>
+<h3>Add method to User.prototype</h3>
+	<p>User can now be logged out. Try it</p>
+	<button onclick="appendLogout()">Log out the user</button>
+	<p id="logout"></p>
 
-	
-
-
-<script>
-	
-
-	
-
-	
-	
-</script>
 
 </body>
 </html>
