button name and instantiate user

--- a/javaScriptObjects.html
+++ b/javaScriptObjects.html
@@ -14,7 +14,7 @@
 <hr>
 	<h3>Add methods to User.prototype to log the user in and out</h3>
 	<p>User can now be logged in. Try it</p>
-	<button onclick="appendFunctionLogin()">Log out the user</button>
+	<button onclick="appendFunctionLogin()">Log in the user</button>
 	<p id="login"></p>
 
 	<h3>Add methods to User.prototype to log the user in and out</h3>
