--- a/javaScriptObjects.html
+++ b/javaScriptObjects.html
@@ -6,22 +6,35 @@
 <body>
 
 	<h1>JavaScript Objects</h1>
+		<p>This demo is done with JavaScript Objects.  I did not demonstrate classes, but since 2015 JavaScript has had classes available. The way classes inherit is different (using "Extends" to inherit, etc.)  But I wanted to understand how to inherit from an OBJECT, not a class. So my code demonstration uses Objects only and no classes for inheritance, instantiation, properties, and methods.</p> 
 
 	<h3>Create a user:</h3>
 	<p>User is an object with properties of name, email, and if they are logged in or not. There are no methods associated with the user object at this point.</p>
 	<button onclick="demoObjectCreation()">Reveal our user info</button>
 	<p id="object"></p>
 <hr>
-	<h3>Add methods to User.prototype to log the user in and out</h3>
+	<h3>Add methods to User.prototype to log the user in </h3>
 	<p>User can now be logged in. Try it</p>
 	<button onclick="appendFunctionLogin()">Log in the user</button>
 	<p id="login"></p>
 
-	<h3>Add methods to User.prototype to log the user in and out</h3>
+	<h3>Add methods to User.prototype to log the user out</h3>
 	<p>User can now be logged in. Try it</p>
 	<button onclick="appendFunctionLogout()">Log out the user</button>
 	<p id="logout"></p>
 
+	<h3>Create a new object called Admin.  Admin will inherit  all of the properties and methods from User, and will add the property of "role" for the admin.</h3>
+	<h4>To inherit, when we instantiate an admin, we pass the info needed to create a user (email, name) </h4>
+	<p> Add an admin</p>
+	<button onclick="viewAdminInfo()">View Admin Info</button>
+	<p id="adminInfo"></p>
+
+	<h3>Inheritance also allows us to use the login and logout function for admin (because admin is a user). </h3>
+	<p>Log in the admin</p>
+	<button onclick="adminLogin()">Log in the user</button>
+	<p id="adminLogin"></p>
+	<button onclick="adminLogout()">Log in the user</button>
+	<p id="adminLogout"></p>
 </body>
 </html>
 
