added hr and changed admin info and button name

--- a/javaScriptObjects.html
+++ b/javaScriptObjects.html
@@ -17,24 +17,31 @@
 	<p>User can now be logged in. Try it</p>
 	<button onclick="appendFunctionLogin()">Log in the user</button>
 	<p id="login"></p>
-
+	<hr>
+	
 	<h3>Add methods to User.prototype to log the user out</h3>
 	<p>User can now be logged in. Try it</p>
 	<button onclick="appendFunctionLogout()">Log out the user</button>
 	<p id="logout"></p>
+	<hr>
 
 	<h3>Create a new object called Admin.  Admin will inherit  all of the properties and methods from User, and will add the property of "role" for the admin.</h3>
 	<h4>To inherit, when we instantiate an admin, we pass the info needed to create a user (email, name) </h4>
 	<p> Add an admin</p>
 	<button onclick="viewAdminInfo()">View Admin Info</button>
 	<p id="adminInfo"></p>
+	<hr>
 
 	<h3>Inheritance also allows us to use the login and logout function for admin (because admin is a user). </h3>
 	<p>Log in the admin</p>
-	<button onclick="adminLogin()">Log in the user</button>
+	<button onclick="adminLogin()">Log in the admin</button>
 	<p id="adminLogin"></p>
-	<button onclick="adminLogout()">Log in the user</button>
+	<hr>
+
+	<p>Log out the admin</p>
+	<button onclick="adminLogout()">Log out the admin</button>
 	<p id="adminLogout"></p>
+	<hr>
 </body>
 </html>
 
