added .js source to html

--- a/localStorage.html
+++ b/localStorage.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Sheri Hansen Local Storage Demo</title>
+	<script src="localStorage.js"></script>
 </head>
 <body>
 	<p>Local Storage is used similarly as session storage, BUT it will continue to reside on the computer even after the browser is closed.  It gives the web STATE!</p>
