--- a/localStorage.html
+++ b/localStorage.html
@@ -25,6 +25,8 @@
 
 	<p> For example, we can track how many times a person clicks on the red button vs the blue button. And return that after closing and opening the web browser.</p>
 
+	<p>Because I am lazy, lets just count by pulling the last click count from the localStorage and adding it to it, then setting local storage again.</p>
+
 	<div>
 		<p><button onclick="clickBlueButton()" type="button" style="background-color: blue; color: white">Click me!</button>
 		</p>
