renamed function in html

--- a/localStorage.html
+++ b/localStorage.html
@@ -20,7 +20,7 @@
 	</div>
 	<p id="demoUserData">User Info</p>
 	<hr>
-	<button onclick="storeUserData()" type="button" style="background-color: black; color: white">Click here to store the user data</button>
+	<button onclick="createUser()" type="button" style="background-color: black; color: white">Click here to store the user data</button>
 
 
 	<p> For example, we can track how many times a person clicks on the red button vs the blue button. And return that after closing and opening the web browser.</p>
