clear localStorage and display

--- a/localStorage.html
+++ b/localStorage.html
@@ -60,6 +60,27 @@
 		<p id="retrieve"></p>
 
 	</div>
+
+	<hr>
+	
+	<h1>REMOVE ITEMS FROM LOCAL STORAGE</h1>
+	<p
+
+	<div>
+		<p><button onclick=“removeData()” type="button" style="background-color: orange; color: white">Remove your data!</button>
+		</p>
+		<p id=“remove1”></p>
+		<hr>
+		<p id="displayItemsRemaining1"></p>
+		<hr>
+		<p id=“remove2”></p>
+		<hr>
+		<p id="displayItemsRemaining2"></p>
+		<hr>
+		<p>Takes too long to remove it one by one, lets clear it all</p>
+		<p id="clear"></p>
+	</div style="border-bottom: 500px">;
+
 	
 </body>
 </html>
