rm ; and increase bottom border space

--- a/localStorage.html
+++ b/localStorage.html
@@ -79,7 +79,7 @@
 		<hr>
 		<p>Takes too long to remove it one by one, lets clear it all</p>
 		<p id="clear"></p>
-	</div style="border-bottom: 500px">;
+	</div style="border-bottom: 800px">
 
 	
 </body>
