fix rm illegal characters

--- a/localStorage.html
+++ b/localStorage.html
@@ -69,11 +69,11 @@
 	<div>
 		<p><button onclick=“removeData()” type="button" style="background-color: orange; color: white">Remove your data!</button>
 		</p>
-		<p id=“remove1”></p>
+		<p id="remove1"></p>
 		<hr>
 		<p id="displayItemsRemaining1"></p>
 		<hr>
-		<p id=“remove2”></p>
+		<p id="remove2"></p>
 		<hr>
 		<p id="displayItemsRemaining2"></p>
 		<hr>
